force-app/main/default/objects/CL_Lease_Financial_Report__c/CL_Lease_Financial_Report__c.object-meta.xml
<CustomObject>
    <label>CL Lease Financial Report</label>
    <nameField>
        <label>CL Lease Financial Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CL Lease Financial Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>