force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Accounting_Yield__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Yield__c</fullName>
    <label>Accounting Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>