force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Amortization_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Start_Date__c</fullName>
    <label>Amortization Start Date</label>
    <type>Date</type>
</CustomField>