force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Amortized_Fee_1_4_LTD__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Fee_1_4_LTD__c</fullName>
    <formula>Amortized_Fee_1_LTD__c +  Amortized_Fee_4_LTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amortized Fee 1 &amp; 4 LTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>