force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Amortized_IDC_YTD__c.field-meta.xml
<CustomField>
    <fullName>Amortized_IDC_YTD__c</fullName>
    <label>Amortized IDC YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>