force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Balance_Evergreen_Rent_Tax_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Evergreen_Rent_Tax_Due__c</fullName>
    <label>Balance Evergreen Rent + Tax Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>