force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Balance_Origination_Fees_Tax_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Origination_Fees_Tax_Due__c</fullName>
    <label>Balance Origination Fees + Tax Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>