force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Beginning_Net_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Net_Investment_Amount__c</fullName>
    <label>Beginning Net Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>