force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Beginning_Unamortized_Fee2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Unamortized_Fee2_Amount__c</fullName>
    <formula>Beginning_Unamortized_Fee_2_Amount__c + Ending_Unamortized_Fee_2_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beginning Unamortized Fee2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>