force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Beginning_Unamortized_Fee_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Unamortized_Fee_3_Amount__c</fullName>
    <label>Current  Fee #3 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>