force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Beginning_Unearned_Lease_Income1__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Unearned_Lease_Income1__c</fullName>
    <formula>Beginning_Unearned_Lease_Income__c + Ending_Unearned_Lease_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beginning Unearned Lease Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>