force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Est_Prop_Tax_Transaction_Charges__c.field-meta.xml
<CustomField>
    <fullName>Billed_Est_Prop_Tax_Transaction_Charges__c</fullName>
    <label>Billed Est Prop Tax Transaction(Charges)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>