force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Estimated_Property_Tax_Streams__c.field-meta.xml
<CustomField>
    <fullName>Billed_Estimated_Property_Tax_Streams__c</fullName>
    <label>Billed Estimated Property Tax Streams</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>