force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Evergreen_Rent_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Billed_Evergreen_Rent_Transactions__c</fullName>
    <label>Billed Evergreen Rent Transactions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>