force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Late_Fees_Transactions_Charges__c.field-meta.xml
<CustomField>
    <fullName>Billed_Late_Fees_Transactions_Charges__c</fullName>
    <label>Billed Late Fees Transactions (Charges)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>