force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Origination_Fees_Txns_Charges__c.field-meta.xml
<CustomField>
    <fullName>Billed_Origination_Fees_Txns_Charges__c</fullName>
    <label>Billed Origination Fees Txns (Charges)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>