force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Service_Fees_Streams__c.field-meta.xml
<CustomField>
    <fullName>Billed_Service_Fees_Streams__c</fullName>
    <label>Billed Service Fees Streams</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>