force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Tax_on_Est_Prop_Tax_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Billed_Tax_on_Est_Prop_Tax_Transactions__c</fullName>
    <label>Billed Tax on Est Prop Tax Transactions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>