force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Tax_on_Insurance_Fees_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Billed_Tax_on_Insurance_Fees_Transaction__c</fullName>
    <label>Billed Tax on Insurance Fees Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>