force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Billed_Unpaid_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Billed_Unpaid_Receivable__c</fullName>
    <label>Billed Unpaid Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>