force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Co_Lessee__c.field-meta.xml
<CustomField>
    <fullName>Co_Lessee__c</fullName>
    <label>Co Lessee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>