force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Dealer_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Payment_Date__c</fullName>
    <label>Dealer Payment Date</label>
    <type>Date</type>
</CustomField>