force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Delinquency_Grace_Days__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Grace_Days__c</fullName>
    <label>Delinquency Grace Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>