force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Earned_Lease_Income_MTD__c.field-meta.xml
<CustomField>
    <fullName>Earned_Lease_Income_MTD__c</fullName>
    <label>Earned Lease Income MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>