force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Earned_Residual_Income_LTD__c.field-meta.xml
<CustomField>
    <fullName>Earned_Residual_Income_LTD__c</fullName>
    <label>Earned Residual Income LTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>