force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Ending_Residual_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ending_Residual_Balance__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Ending Residual Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>