force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Ending_Unamortized_Fee_1_4_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ending_Unamortized_Fee_1_4_Amount__c</fullName>
    <formula>Ending_Unamortized_Fee_1_Amount__c +  Ending_Unamortized_Fee_4_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ending Unamortized Fee 1 &amp; 4 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>