force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Ending_Unamortized_Fee_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ending_Unamortized_Fee_3_Amount__c</fullName>
    <label>Ending Unamortized Fee #3 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>