force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Ending_Unearned_Residual_Income__c.field-meta.xml
<CustomField>
    <fullName>Ending_Unearned_Residual_Income__c</fullName>
    <label>Ending Unearned Residual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>