force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost__c</fullName>
    <label>Equipment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>