force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Excess_Balance__c.field-meta.xml
<CustomField>
    <fullName>Excess_Balance__c</fullName>
    <label>Excess Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>