force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Fee_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Fee_3_Name__c</fullName>
    <label>Fee #3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>