force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Financed_Amount__c</fullName>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>