force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Financial_Product__c.field-meta.xml
<CustomField>
    <fullName>Financial_Product__c</fullName>
    <label>Financial Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>