force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <label>Funder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>