force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Gross_Estimated_Property_Tax__c.field-meta.xml
<CustomField>
    <fullName>Gross_Estimated_Property_Tax__c</fullName>
    <label>Gross Estimated Property Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>