force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Gross_Evergreen__c.field-meta.xml
<CustomField>
    <fullName>Gross_Evergreen__c</fullName>
    <label>Gross Evergreen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>