force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Gross_Service_Fees__c.field-meta.xml
<CustomField>
    <fullName>Gross_Service_Fees__c</fullName>
    <label>Gross Service Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>