force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <label>Guarantor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>