force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Late_Charge_Grace_Days__c.field-meta.xml
<CustomField>
    <fullName>Late_Charge_Grace_Days__c</fullName>
    <label>Late Charge Grace Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>