force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Lease_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Lease_Billing_City__c</fullName>
    <label>Lease Billing City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>