force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Lease_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Lease_Billing_State__c</fullName>
    <label>Lease Billing State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>