force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>