force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Lessee_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Account_Number__c</fullName>
    <label>Lessee Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>