force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Lessee_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Billing_Address__c</fullName>
    <label>Lessee Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>