force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Lessee_Billing_Address_rich__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Billing_Address_rich__c</fullName>
    <label>Lessee Billing Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>