force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Lessee_Name__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Name__c</fullName>
    <label>Lessee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>