force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Master_Lease_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Master_Lease_Agreement__c</fullName>
    <label>Master Lease Agreement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>