force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>Contract_End_Date__c</formula>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>