force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Non_PNC_Payments__c.field-meta.xml
<CustomField>
    <fullName>Non_PNC_Payments__c</fullName>
    <label>Non PNC Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>