force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Number_of_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Equipment__c</fullName>
    <label>Number of Equipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>